--- a/shippable.resources.yml
+++ b/shippable.resources.yml
@@ -7,13 +7,13 @@ resources:
 # Docker Image for VISUALIZER
   - name: dv-img
     type: image
-    integration: dh-manishas
+    integration: shipdeploy
     pointer:
-      sourceName: "shippableSamples/samplepipelinesdemo"
+      sourceName: "accolademin/samplepipelinesdemo"
       isPull: false
     #make sure this seed version exists in your registry account
     seed:
-      versionName: master.1
+      versionName: master.6
 
 # Docker Image Options for VISUALIZER
   - name: dv-img-opts
@@ -35,7 +35,7 @@ resources:
 # add TEST env - AWS cluster
   - name: env-test-ecs
     type: cluster
-    integration: demo-manishas-ecs
+    integration: shipdeploy
     pointer:
       sourceName : "demo-shippable-ecs-test"
       region: "us-east-1"
